clusters/talos-cluster/io/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: io
  namespace: io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: io
  template:
    metadata:
      labels:
        app: io
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: io
          image: zot.maix.ovh/io:v0.0.13
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
