clusters/talos-cluster/io/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: io-service
  namespace: io
spec:
  selector:
    app: io
  ports:
    - name: http
      port: 3000
      targetPort: 3000
